--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.26.2",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
