--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && vite build --ssr src/entry-server.tsx",
+    "dev": "concurrently \"vite\" \"node server.js\"",
+    "build": "vite build && vite build --ssr src/entry-server.jsx",
     "serve": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express-rate-limit": "^7.4.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13"
@@ -22,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^18.3.9",
     "@vitejs/plugin-react": "^1.0.0",
+    "concurrently": "^9.0.1",
     "vite": "latest",
     "vite-plugin-ssr": "^0.4.142"
   },
