--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emailjs/browser": "^4.4.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "emailjs": "^4.0.3",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "multer": "^1.4.5-lts.1",
@@ -20,7 +21,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "vike": "^0.4.201"
   },
   "devDependencies": {
     "@types/react": "^18.3.9",
